@@ -1,0 +1,153 @@
+#FIG 3.2  Produced by xfig version 3.2.5-alpha5
+Landscape
+Center
+Metric
+A4      
+100.00
+Single
+-2
+1200 2
+0 32 #ff9408
+0 33 #007000
+0 34 #fed600
+0 35 #d82010
+0 36 #003484
+0 37 #d62010
+0 38 #389000
+0 39 #ba0000
+0 40 #003380
+0 41 #00a7bd
+0 42 #ffc500
+0 43 #087bd0
+0 44 #fbc100
+0 45 #840029
+0 46 #07399c
+0 47 #0063bd
+0 48 #39acdf
+0 49 #42c0e0
+0 50 #31ceff
+0 51 #ffde00
+0 52 #085a00
+0 53 #ff8200
+0 54 #007d00
+0 55 #0000be
+6 450 675 1800 1125
+2 2 0 1 0 7 50 -1 -1 4.000 0 0 -1 0 0 5
+	 450 675 1800 675 1800 1125 450 1125 450 675
+4 0 0 50 -1 0 14 0.0000 4 150 1170 540 945 webbrowser\001
+-6
+6 450 1800 1800 2250
+2 2 0 1 0 7 50 -1 -1 4.000 0 0 -1 0 0 5
+	 450 1800 1800 1800 1800 2250 450 2250 450 1800
+4 0 0 50 -1 0 14 0.0000 4 165 1215 540 2070 submit client\001
+-6
+6 3600 675 4725 1125
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 3600 675 4725 675 4725 1125 3600 1125 3600 675
+4 0 0 50 -1 0 14 0.0000 4 150 975 3690 945 webserver\001
+-6
+6 5850 3600 7020 4050
+2 4 0 1 0 7 50 -1 -1 4.000 0 0 7 0 0 5
+	 7020 4050 7020 3600 5850 3600 5850 4050 7020 4050
+4 0 0 50 -1 0 14 0.0000 4 210 1020 5940 3915 Filesystem\001
+-6
+6 90 1215 1260 1665
+2 4 0 1 0 7 50 -1 -1 4.000 0 0 7 0 0 5
+	 1260 1665 1260 1215 90 1215 90 1665 1260 1665
+4 0 0 50 -1 0 14 0.0000 4 210 1020 180 1530 Filesystem\001
+-6
+6 675 2700 1800 3150
+2 4 0 1 0 7 50 -1 -1 4.000 0 0 7 0 0 5
+	 1800 3150 1800 2700 675 2700 675 3150 1800 3150
+4 0 0 50 -1 0 14 0.0000 4 150 900 765 3015 ~/.submit\001
+-6
+6 4950 2700 6300 3150
+2 2 0 1 0 7 50 -1 -1 4.000 0 0 -1 0 0 5
+	 4950 2700 6300 2700 6300 3150 4950 3150 4950 2700
+4 0 0 50 -1 0 14 0.0000 4 180 1005 5085 2970 submit_db\001
+-6
+6 4275 3600 5400 4050
+2 4 0 1 0 7 50 -1 -1 4.000 0 0 7 0 0 5
+	 5400 4050 5400 3600 4275 3600 4275 4050 5400 4050
+4 0 0 50 -1 0 14 0.0000 4 150 870 4410 3915 Database\001
+-6
+6 3150 2700 4500 3150
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 3150 2700 4500 2700 4500 3150 3150 3150 3150 2700
+4 0 0 50 -1 0 14 0.0000 4 210 1230 3240 2970 submit_copy\001
+-6
+6 3150 1800 4725 2250
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 3150 1800 4725 1800 4725 2250 3150 2250 3150 1800
+4 0 0 50 -1 0 14 0.0000 4 150 1410 3240 2070 submitdaemon\001
+-6
+6 6075 1800 7650 2250
+2 2 0 1 0 7 50 -1 -1 0.000 0 0 -1 0 0 5
+	 6075 1800 7650 1800 7650 2250 6075 2250 6075 1800
+4 0 0 50 -1 0 14 0.0000 4 150 1410 6165 2070 submitdaemon\001
+-6
+2 1 1 1 0 7 50 -1 -1 4.000 0 0 -1 0 0 2
+	 2700 225 2700 3825
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1800 900 3600 900
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1800 1980 3600 990
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 4725 900 5400 900
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1260 1440 1530 1125
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1260 1440 1485 1800
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1350 2250 1350 2700
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 5625 3150 5175 3600
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 5625 3150 6075 3600
+2 1 3 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 4050 2250 4050 2700
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1800 2925 3150 2925
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 4500 2700 5580 1125
+2 4 0 1 0 7 50 -1 -1 4.000 0 0 7 0 0 5
+	 7200 1125 7200 675 5400 675 5400 1125 7200 1125
+2 1 0 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 5850 1125 5625 2700
+2 1 3 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 4725 2025 5400 2700
+2 1 3 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 6390 2250 5940 2700
+2 1 3 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 6435 1125 6435 1800
+2 1 3 1 0 7 50 -1 -1 4.000 0 0 -1 1 0 2
+	0 0 1.00 60.00 120.00
+	 1800 2025 3150 2025
+4 0 0 50 -1 0 14 0.0000 4 210 600 2925 1530 http(s)\001
+4 0 0 50 -1 0 14 0.0000 4 210 600 2025 1080 http(s)\001
+4 0 0 50 -1 0 14 0.0000 4 165 630 1980 2205 dolstra\001
+4 0 0 50 -1 0 14 0.0000 4 150 1665 5490 945 INCOMINGDIR\001
+4 0 0 50 -1 0 16 0.0000 4 255 465 4365 405 Jury\001
+4 0 0 50 -1 0 16 0.0000 4 195 645 810 405 Team\001
+4 0 0 50 -1 0 14 0.0000 4 165 315 2160 3105 scp\001
+4 0 0 50 -1 0 14 0.0000 4 105 435 6300 2520 exec\001
+4 0 0 50 -1 0 14 0.0000 4 225 360 6525 1530 poll\001
+4 0 0 50 -1 0 14 0.0000 4 105 435 5085 2340 exec\001
+4 0 0 50 -1 0 14 0.0000 4 105 435 3555 2475 exec\001
+4 0 4 50 -1 0 12 0.0000 4 135 540 1395 1530 choice\001
+4 0 4 50 -1 0 12 0.0000 4 135 540 2070 1980 choice\001
