@@ -11,6 +11,7 @@ Version 2.1.1 - SVN
  - The colors of the problems are now shown in the jury problems overview
    (Closes: #1808308).
  - Improve contrast of default team category colours.
+ - Some improvements to admin manual including submission diagram.
 
 Version 2.1.0 - 5 September 2007
 --------------------------------
